homeassistant/homeassistant-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
spec:
  selector:
    app: homeassistant
  ports:
  - name: homeassistant-port
    port: 8123
    targetPort: 8123
