homeassistant/matter-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter-server-service
spec:
  selector:
    app: matter-server
  ports:
  - name: matter-server-websocket
    port: 5580
    targetPort: 5580
